--- a/DetailSail/DetailsWindow.xaml
+++ b/DetailSail/DetailsWindow.xaml
@@ -12,6 +12,7 @@
         <Button x:Name="btDelete" Content="Delete" HorizontalAlignment="Left" Margin="165,370,0,0" VerticalAlignment="Top" FontSize="18" Width="90" Click="btDelete_Click"/>
         <Button x:Name="btUpdate" Content="Update" HorizontalAlignment="Left" Margin="301,370,0,0" VerticalAlignment="Top" FontSize="18" Width="90" Click="btUpdate_Click"/>
         <Button x:Name="btClose" Content="Close" HorizontalAlignment="Left" Margin="660,370,0,0" VerticalAlignment="Top" FontSize="18" Width="90" Click="btClose_Click"/>
+        <Button x:Name="btUpdate_Copy" Content="Search" HorizontalAlignment="Left" Margin="468,370,0,0" VerticalAlignment="Top" FontSize="18" Width="90" Click="btSearch_Click"/>
 
     </Grid>
 </Window>
