--- a/DetailSail/DetailInDeliveryWindow.xaml
+++ b/DetailSail/DetailInDeliveryWindow.xaml
@@ -9,6 +9,7 @@
     <Grid>
         <DataGrid x:Name="dgDetailInDelivery" Margin="10,10,10,105"/>
         <Button x:Name="btClose" Content="Close" HorizontalAlignment="Left" Margin="659,370,0,0" VerticalAlignment="Top" Width="90" FontSize="18" Click="btClose_Click"/>
+        <Button x:Name="btExport" Content="Export" HorizontalAlignment="Left" Margin="30,370,0,0" VerticalAlignment="Top" Width="90" FontSize="18" Click="btExport_Click"/>
 
     </Grid>
 </Window>
