--- a/DetailSail/DetailsWindow.xaml
+++ b/DetailSail/DetailsWindow.xaml
@@ -9,10 +9,11 @@
     <Grid>
         <DataGrid x:Name="dgDetails" Margin="10,10,10,105"/>
         <Button x:Name="btAdd" Content="Add" HorizontalAlignment="Left" Margin="30,370,0,0" VerticalAlignment="Top" FontSize="18" Width="90" Click="btAdd_Click"/>
-        <Button x:Name="btDelete" Content="Delete" HorizontalAlignment="Left" Margin="165,370,0,0" VerticalAlignment="Top" FontSize="18" Width="90" Click="btDelete_Click"/>
-        <Button x:Name="btUpdate" Content="Update" HorizontalAlignment="Left" Margin="301,370,0,0" VerticalAlignment="Top" FontSize="18" Width="90" Click="btUpdate_Click"/>
-        <Button x:Name="btClose" Content="Close" HorizontalAlignment="Left" Margin="660,370,0,0" VerticalAlignment="Top" FontSize="18" Width="90" Click="btClose_Click"/>
-        <Button x:Name="btUpdate_Copy" Content="Search" HorizontalAlignment="Left" Margin="468,370,0,0" VerticalAlignment="Top" FontSize="18" Width="90" Click="btSearch_Click"/>
+        <Button x:Name="btDelete" Content="Delete" HorizontalAlignment="Left" Margin="157,370,0,0" VerticalAlignment="Top" FontSize="18" Width="90" Click="btDelete_Click"/>
+        <Button x:Name="btUpdate" Content="Update" HorizontalAlignment="Left" Margin="285,370,0,0" VerticalAlignment="Top" FontSize="18" Width="90" Click="btUpdate_Click"/>
+        <Button x:Name="btClose" Content="Close" HorizontalAlignment="Left" Margin="674,370,0,0" VerticalAlignment="Top" FontSize="18" Width="90" Click="btClose_Click"/>
+        <Button x:Name="btUpdate_Copy" Content="Search" HorizontalAlignment="Left" Margin="415,370,0,0" VerticalAlignment="Top" FontSize="18" Width="90" Click="btSearch_Click"/>
+        <Button x:Name="btExport" Content="Export" HorizontalAlignment="Left" Margin="545,370,0,0" VerticalAlignment="Top" FontSize="18" Width="90" Click="btExport_Click"/>
 
     </Grid>
 </Window>
