--- a/DetailSail/HistoryPriceWindow.xaml
+++ b/DetailSail/HistoryPriceWindow.xaml
@@ -10,8 +10,9 @@
         <DataGrid x:Name="dgHistoryPrice" Margin="10,10,10,105"/>
         <Button x:Name="tbAdd" Content="Add" HorizontalAlignment="Left" Margin="30,370,0,0" VerticalAlignment="Top" FontSize="18" Width="90" Click="tbAdd_Click"/>
         <Button x:Name="tbDelete" Content="Delete" HorizontalAlignment="Left" Margin="165,370,0,0" VerticalAlignment="Top" FontSize="18" Width="90" Click="tbDelete_Click"/>
-        <Button x:Name="tbUpdate" Content="Update" HorizontalAlignment="Left" Margin="310,370,0,0" VerticalAlignment="Top" FontSize="18" Width="90" Click="tbUpdate_Click"/>
+        <Button x:Name="tbUpdate" Content="Update" HorizontalAlignment="Left" Margin="310,370,0,0" VerticalAlignment="Top" FontSize="18" Width="90" Click="btExport_Click"/>
         <Button x:Name="tbClose" Content="Close" HorizontalAlignment="Left" Margin="660,370,0,0" VerticalAlignment="Top" FontSize="18" Width="90" Click="tbClose_Click"/>
+        <Button x:Name="btExport" Content="Export" HorizontalAlignment="Left" Margin="449,370,0,0" VerticalAlignment="Top" FontSize="18" Width="90" Click="btExport_Click"/>
 
     </Grid>
 </Window>
