--- a/DetailSail/DetailsWindow.xaml
+++ b/DetailSail/DetailsWindow.xaml
@@ -12,7 +12,7 @@
         <Button x:Name="btDelete" Content="Delete" HorizontalAlignment="Left" Margin="157,370,0,0" VerticalAlignment="Top" FontSize="18" Width="90" Click="btDelete_Click"/>
         <Button x:Name="btUpdate" Content="Update" HorizontalAlignment="Left" Margin="285,370,0,0" VerticalAlignment="Top" FontSize="18" Width="90" Click="btUpdate_Click"/>
         <Button x:Name="btClose" Content="Close" HorizontalAlignment="Left" Margin="674,370,0,0" VerticalAlignment="Top" FontSize="18" Width="90" Click="btClose_Click"/>
-        <Button x:Name="btUpdate_Copy" Content="Search" HorizontalAlignment="Left" Margin="415,370,0,0" VerticalAlignment="Top" FontSize="18" Width="90" Click="btSearch_Click"/>
+        <Button x:Name="btSearch" Content="Search" HorizontalAlignment="Left" Margin="415,370,0,0" VerticalAlignment="Top" FontSize="18" Width="90" Click="btSearch_Click"/>
         <Button x:Name="btExport" Content="Export" HorizontalAlignment="Left" Margin="545,370,0,0" VerticalAlignment="Top" FontSize="18" Width="90" Click="btExport_Click"/>
 
     </Grid>
